--- a/Part2/index.html
+++ b/Part2/index.html
@@ -9,10 +9,16 @@
 <body>
   <header><h1>Poker Cards</h1></header>
     <main>
-        <section><span>A</span><span>♦</span><span>A</span></section>
-        <section><span>A</span><span>♣</span><span>A</span></section>
-        <section><span>A</span><span>♥</span><span>A</span></section>
-        <section><span>A</span><span>♠</span><span>A</span></section>
+
+        <section id='diamonds'><span>A</span><span>♦</span><span>A</span></section>
+        <section id='clubs'><span>A</span><span>♣</span><span>A</span></section>
+        <section id='heart'><span>A</span><span>♥</span><span>A</span></section>
+        <section id='spades'><span>A</span><span>♠</span><span>A</span></section>
     </main>
+    <input id='idInput' type='text' placeholder='Set ID'></input>
+    <input id='colorInput' type='text' placeholder='Set Color'></input>    
+    <button id='btn' onclick=setCard()>Edit Card</button>    
+    <button id='btn2' onclick=resetCard()>Reset</button>
 </body>
+<script src='index.js'></script>
 </html>
