--- a/Part2/index.html
+++ b/Part2/index.html
@@ -8,17 +8,17 @@
   </head>
 <body>
   <header><h1>Poker Cards</h1></header>
-    <main>
-
+    <main id='myCards'>
         <section id='diamonds'><span>A</span><span>♦</span><span>A</span></section>
         <section id='clubs'><span>A</span><span>♣</span><span>A</span></section>
-        <section id='heart'><span>A</span><span>♥</span><span>A</span></section>
+        <section id='hearts'><span>A</span><span>♥</span><span>A</span></section>
         <section id='spades'><span>A</span><span>♠</span><span>A</span></section>
     </main>
     <input id='idInput' type='text' placeholder='Set ID'></input>
     <input id='colorInput' type='text' placeholder='Set Color'></input>    
     <button id='btn' onclick=setCard()>Edit Card</button>    
     <button id='btn2' onclick=resetCard()>Reset</button>
+    <script src='index.js'></script>
 </body>
-<script src='index.js'></script>
+
 </html>
